--- a/class/main.css
+++ b/class/main.css
@@ -122,7 +122,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #absentLabel {
-    margin-top: 20px !important;
+    margin: 30px auto 5px auto !important;
     color: darkorange;
 }
 
