--- a/class/main.css
+++ b/class/main.css
@@ -57,8 +57,12 @@ a:link, a:visited, a:hover, a:active {
 
 *::-webkit-scrollbar { width: 0 !important }
 
-#customListPop, #bdaysNeededPop, #photosNeededPop, #emailsNeededPop, #studentPropertiesPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addStudentNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editStudentNotePop, #editTeacherNotePop, #modifyNotesPop, #studentNotesPop, #bdayListPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop {
+#customListPop, #studentPropertiesPop, #attArchiveListPop, #studentAttStatsPop, #attStatsPop, #openInsigniaPop, #rankChartPop, #alertsPop, #asReasonContainer, #studentPhotoPop, #studentStatsPop, #teamListContainer, #sortChoicePop, #sortByPop, #gameLogPop, #preloadImagesPop, #dataInputAlertPop, #enterReasonDiv, #teamsListPop, #playGamePop, #att2Pop, #att3Pop, #actionAlertPop, #advancedOptionsPop, #infoAlertPop, #resetDrawingPop, #addTeacherNotePop, #addStudentNotePop, #modifyTeacherNotesPop, #teacherNotesPop, #customSortListPop, #editStudentPop, #newStudentPop, #emailPop, #editStudentNotePop, #editTeacherNotePop, #modifyNotesPop, #studentNotesPop, #bdListPop, #logPop, #missionsPop, #mvPointsPop, #asPointsPop, #promoPop, #backupPop, #promoListPop, #attListPop, #wtlPop, #mainMenuPop, #drawingPop, #randomPop, #studentPop {
     display: none;
+}
+
+#customList, #customListAbsent { 
+    text-align: left;
 }
 
 .pointer {
@@ -132,10 +136,6 @@ a:link, a:visited, a:hover, a:active {
 
 .pop {
     padding: 20px;
-}
-
-#dispBday {
-    font-size: 18px;
 }
 
 #advancedOptionsPop {
@@ -402,7 +402,7 @@ a:link, a:visited, a:hover, a:active {
     color: lawngreen;
 }
 
-.genderAndBdayContainer {
+.genderAndBdContainer {
     width: 375px;
     display: flex;
     justify-content: space-evenly;
@@ -934,7 +934,7 @@ a:link, a:visited, a:hover, a:active {
     cursor: pointer;
 }
 
-#promoListPop p, #bdayListPop p, #photosNeededPop p, #emailsNeededPop p, #bdaysNeededPop p {
+#promoListPop p, #bdListPop p, #photosNeededPop p, #emailsNeededPop p, #bdsNeededPop p {
     margin: 15px auto;
     cursor: pointer;
 }
